# PrinterAPI

./: LICENSE.md  main.py  printer.py  pyproject.toml
app/: main.py  printer.py  utils.py
